# extensions-FFMPEGResource

./: CMakeLists.txt  FindFFMPEG.cmake  Setup.cmake  SetupFFMPEG.cmake
Meta/: FFMPEG.h
Resources/: FFMPEGResource.cpp  FFMPEGResource.h  IMovieResource.h  MovieResource.cpp  MovieResource.h  thetypes.h
Utils/: Billboard.h
